--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+cmake-build-debug
+cmake-build-debug/
 .idea/
 # Compiled Object files
 *.slo
