--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ set(CMAKE_CXX_STANDARD 14)
 
 set(SOURCE_FILES main.cpp Background.h Background.cpp MainSpaceShip.h)
 set(EXECUTABLE_NAME "XeonWars")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+#add_definitions(-DRES="Resources/")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
 find_package(SFML 2 REQUIRED system window graphics network audio)
