añade la clase de bullets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.5)
 project(XeonWars)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(SOURCE_FILES main.cpp Background.h Background.cpp MainSpaceShip.h)
+set(SOURCE_FILES main.cpp Background.h Background.cpp MainSpaceShip.h BulletClass.cpp BulletClass.h)
 set(EXECUTABLE_NAME "XeonWars")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
 #add_definitions(-DRES="Resources/")
