--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(XeonWars)
 set(CMAKE_CXX_STANDARD 14)
 
 set(SOURCE_FILES main.cpp Background.h Background.cpp MainSpaceShip.h MainSpaceShip.cpp enemy.h enemy.cpp  entity.h entity.cpp motion.h motion.cpp
-    motiongenerator.h motiongenerator.cpp)
+    motiongenerator.h motiongenerator.cpp cannon.h cannon.cpp)
 set(EXECUTABLE_NAME "XeonWars")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
 #add_definitions(-DRES="Resources/")
