--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,13 @@ set(CMAKE_CXX_STANDARD 14)
 
 
 set(SOURCE_FILES main.cpp Background.h Background.cpp MainSpaceShip.h MainSpaceShip.cpp List.h Node.h List.cpp Node.cpp Game.h Game.cpp Collision.cpp Collision.h Queue.cpp Queue.h Screen.h Screens.h Menu.cpp Menu.h Utils.cpp Utils.h powerUp.h enemy.h enemy.cpp  entity.h entity.cpp motion.h motion.cpp
-     bullet.h bullet.cpp cannon.h cannon.cpp collisionmanager.h collisionmanager.cpp ConnectionManager.h ConnectionManager.cpp MQTTClient.h MQTTClientPersistence.h ScoreManager.cpp ScoreManager.h BossManager.cpp BossManager.h GameOverScreen.cpp GameOverScreen.h)
+     bullet.h bullet.cpp cannon.h cannon.cpp collisionmanager.h collisionmanager.cpp ConnectionManager.cpp ConnectionManager.h ScoreManager.cpp ScoreManager.h BossManager.cpp BossManager.h GameOverScreen.cpp GameOverScreen.h)
 
 set(EXECUTABLE_NAME "XeonWars")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
-#
-#SET(GCC_COVERAGE_LINK_FLAGS    "-lmqttpp -lmqttv3a")
-#SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )
+
+SET(GCC_COVERAGE_LINK_FLAGS "-lmosquitto")
+SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
 
 #add_definitions(-DRES="Resources/")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
